2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	(gimp_combo_tag_entry_popup_list): focus tag entry when tag popup is
	dropped down to give user better feedback and get rid of description
	text.

2008-07-21  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	(gimp_combo_tag_entry_popup_list): correctly possition popup window
	when it appears on top of tag entry.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_class_init),
	(gimp_tag_entry_dispose): cleaned up a bit: marked some strings for
	translation, free resources on dispose.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_changed),
	(gimp_tag_entry_toggle_desc): properly check if there is at least one
	valid tag entered.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: allow jellybean selection with mouse
	button 1 (normally left).

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: treat tags as jellybeans (as atomic
	objects). When pressing backspace or delete, first select the whole
	tag, on the second press actually delete.

2008-07-20  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	(gimp_combo_tag_entry_popup_list): fixed popup width to properly match
	tag entry width.

2008-07-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpnavigationview.[ch]: Don't expose implementation
	details and extend the interface with trivial new functions.

	* app/display/gimpnavigationeditor.c
	(gimp_navigation_editor_popup): Use the new interface instead of
	directly accessing the members of the navigation view.

2008-07-19  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.[ch]: highlight selected tags in popup
	list.

2008-07-19  Aurimas Juška  <aurisj@svn.gnome.org>
